# sentry-protos

./: .craft.yml  .envrc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  Cargo.toml  Makefile  README.md  buf.yaml  index.html  requirements.txt  search.html  sentry_protos.options.v1.html  sentry_protos.relay.v1.html  sentry_protos.seer.v1.html  sentry_protos.snuba.v1.html  sentry_protos.snuba.v1alpha.html  setup.py
.github/workflows/: build.yml  ci.yml  docs.yml  release.yml
devenv/: config.ini  sync.py
docs/: sabledocs.toml
js2proto/: README.md  pyproject.toml
js2proto/generators/: js2proto.py
js2proto/js2proto/: js2.proto.jinja
proto/google/protobuf/: edition_unittest.proto  unittest.proto  unittest_custom_options.proto  unittest_features.proto  unittest_invalid_features.proto  unittest_lite.proto  unittest_mset_wire_format.proto  unittest_no_field_presence.proto  unittest_proto3_arena.proto
proto/google/protobuf/compiler/cpp/: test_bad_identifiers.proto
proto/google/protobuf/util/: json_format_proto3.proto
proto/sentry_protos/kafka/events/v1/: events.proto
proto/sentry_protos/options/v1/: options.proto  topics.proto
proto/sentry_protos/relay/v1/: event.proto
proto/sentry_protos/seer/v1/: common.proto  summarize.proto
proto/sentry_protos/snuba/: README.md
proto/sentry_protos/snuba/v1/: endpoint_aggregate_bucket.proto  endpoint_span_samples.proto  endpoint_tags_list.proto  endpoint_time_series.proto  endpoint_trace_item_attributes.proto  endpoint_trace_item_columns.proto  endpoint_trace_item_table.proto  error.proto  examples.py  request_common.proto  time_series.proto  trace_item_attribute.proto  trace_item_filter.proto
proto/sentry_protos/snuba/v1alpha/: endpoint_aggregate_bucket.proto  endpoint_find_trace.proto  endpoint_span_samples.proto  endpoint_tags_list.proto  request_common.proto  trace_item_attribute.proto  trace_item_filter.proto
py/: generate.py  pyproject.toml
rust/: Cargo.toml  README.md  build.rs
rust/src/: lib.rs  sentry_protos.kafka.events.v1.rs  sentry_protos.options.v1.rs  sentry_protos.relay.v1.rs  sentry_protos.snuba.v1alpha.rs
rustgenerator/: Cargo.toml  README.md
rustgenerator/src/: main.rs
scripts/: bump-version.sh  post-release.sh
src/: buf.yaml  pyproject.toml
src/generators/: js2.proto.jinja  js2proto.py
src/kafka/: events.v1.proto
src/relay/: event.proto
src/sentry_protos/dev/snuba/v1/: endpoint_aggregate_bucket.proto  endpoint_find_trace.proto  request_common.proto  trace_item_filter.proto
src/sentry_protos/kafka/events/v1/: events.schema.json
