[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "js2proto"
# Never released, only used internally.
version = "0.1.0"
dependencies = [
    "openapi-pydantic==0.4.0",
    "jinja2==3.1.4",
]

[project.scripts]
js2proto = "js2proto.js2proto:main"
