[project]
name = "sentry-protos"
description = "Generated python code for sentry-protos"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">3.10"
dependencies = [
    "protobuf>=4.25,<5",
    "grpcio>=1.59,<2",
    "grpc-stubs>=1.53,<2"
]

[project.urls]
Homepage = "https://sentry.io"
Repository = "https://github.com/getsentry/sentry-protos"
Changelog = "https://github.com/getsentry/sentry-protos/tree/main/CHANGELOG.md"
