[package]
name = "sentry_protos"
version = "0.1.22"
edition = "2021"
readme = "README.md"
description = "Rust bindings for sentry-protos"
license-file = "LICENSE.md"
authors = ["Sentry <hello@sentry.io>"]
repository = "https://github.com/getsentry/sentry-protos"

[build-dependencies]
glob = "0.3.1"
tonic-build = "0.12"
prost = "0.13"
prost-types = "0.13"
regex = "1.10.5"


[dependencies]
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
