[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sentry-protos-generators"
# Never released, only used internally.
version = "0.1.0"

# Ignore dependencies, let them be just development dependencies installed in requirements.txt
# If generators were extracted as their own project, may make sense to be more specific, but in
# practice these are currently tightly coupled.

[project.scripts]
js2proto = "generators.js2proto:main"

[tool.setuptools.package-dir]
generators = "generators"